<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingBottom="30dp"


    >
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/foodimage"
        android:scaleType="centerCrop"
        android:contentDescription="@string/food_logo"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contineu"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textColor="@color/text_color"


        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        >
<!--       userName design fields-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:id="@+id/username_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />



        </com.google.android.material.textfield.TextInputLayout>
<!--            password design fields-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFEB3B"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgote_password"
        android:layout_width="250dp"
        android:backgroundTint="@color/white"

        android:layout_height="wrap_content"

        android:elevation="5dp"
        android:text="@string/forgote_password"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        android:layout_marginBottom="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btngradiant"
        android:elevation="5dp"

        android:padding="5dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/signup"
        android:background="@drawable/btngradiant"
        android:textStyle="bold"
        android:padding="5dp"
        android:elevation="5dp"
        />




</LinearLayout>