<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".descfragment"
    android:background="#FFFFFF">

  <LinearLayout
      android:layout_marginStart="30dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="#FFFFFF"
      android:layout_marginTop="20dp">


      <androidx.cardview.widget.CardView

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:elevation="3dp"
          app:cardCornerRadius="8dp"
          >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <ImageView
                  android:id="@+id/imageHolder"
                  android:layout_width="match_parent"
                  android:layout_height="200dp"
                  android:scaleType="centerCrop"
                  android:src="@drawable/burger1" />



          </LinearLayout>


      </androidx.cardview.widget.CardView>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/detailsdesign"
          android:orientation="vertical"

          >

          <ImageView
              android:id="@+id/like_btm"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"

              android:src="@drawable/hart_hollow"


              />

          <TextView
              android:id="@+id/nameHolder"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="40dp"
              android:padding="4dp"
              android:text="Name"
              android:textColor="@color/white"
              android:textSize="34sp"
              android:textStyle="bold"


              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="20dp"
              android:layout_marginBottom="5dp"
              android:orientation="horizontal"
              android:padding="5dp"

              >

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/dolar"
                  android:textColor="@color/white"
                  android:textSize="22sp"
                  android:textStyle="bold"

                  />

              <TextView
                  android:id="@+id/priseHolder"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dp"
                  android:text="@string/prise"
                  android:textColor="@color/white"

                  android:textSize="22sp"
                  android:textStyle="bold"


                  />


          </LinearLayout>

          <TextView
              android:id="@+id/descriptionHolder"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="5dp"
              android:text="@string/description1"
              android:textColor="@color/white"
              android:textStyle="bold"

              />


          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/address"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="10dp"
              android:background="@drawable/inputfield"
              android:hint="@string/adderess"
              app:startIconDrawable="@drawable/ic_baseline_home_24"

              >

              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"

                  />


          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/mobileNumber"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="10dp"
              android:background="@drawable/inputfield"
              android:hint="@string/phone"
              app:prefixText="+91"
              app:startIconDrawable="@drawable/phone_vector">

          </com.google.android.material.textfield.TextInputLayout>


          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              app:counterMaxLength="10"


              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:orientation="horizontal"

              >
              <androidx.appcompat.widget.AppCompatButton
                  android:id="@+id/dec_buyNow"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:background="@drawable/btngradiant"
                  android:text="@string/buy_now"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:layout_marginEnd="5dp"

                  />
              <androidx.appcompat.widget.AppCompatButton

                   android:layout_height="wrap_content"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:id="@+id/addToCart"
                  android:background="@drawable/btngradiant"
                   android:text="@string/addtoCard"
                   android:textColor="@color/white"
                   android:textSize="18sp"



                  />



          </LinearLayout>

      </LinearLayout>


  </LinearLayout>





</FrameLayout>