<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:layout_weight="1"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="4dp"

        android:elevation="5dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="180dp"
                android:layout_height="168dp"
                android:scaleType="centerCrop"
                android:src="@drawable/burger1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginStart="12dp"

                >
                <TextView
                    android:id="@+id/foodName"
                    android:layout_marginTop="6dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/food_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:padding="2dp"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dolar"
                        android:textSize="19sp"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:layout_marginEnd="7dp"


                        />
                    <TextView
                        android:id="@+id/foodPrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prise"
                        android:padding="2dp"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"

                        />


                </LinearLayout>

                <TextView
                    android:id="@+id/foodDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    android:text="@string/description1"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>